[package]
name = "rusttest"
version = "0.1.0"
authors = ["Konstantin <phpconf@gmail.com>"]

[dependencies]
reqwest = "0.7.2"
serde = "*"
serde_json = "1.0"
serde_derive = "*"
protobuf = { version = "1.3", features = ["with-bytes"] }
quickcheck = "*"
postgres = { version="0.15", features = ["with-chrono"] }
dbus = "*"
rust-crypto = "^0.2"
structopt = "0.2"
chrono = "0.4.5"

# Профиль dev используется по умолчанию при вызове команды cargo build
[profile.dev]
debug = true  # Добавляет флаг `-g` для компилятора;
opt-level = 0 # Отключаем оптимизацию кода;
